<resources>
    <string name="app_name">My Zarqa</string>
    <string name="engine_started">Engine started......</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Auth -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="create_new_account">Don\'t have any account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="full_name_ktp">Full name on KTP</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="nik">NIK</string>
    <string name="password">Password</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="merchant">Merchant</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="check_email">Check Email</string>
    <string name="send_otp">Send OTP</string>
    <string name="submit">Submit</string>
    <string name="otp">OTP</string>
    <string name="new_password">New Password</string>

    <!-- Bottom Navigation Menu -->
    <string name="bottom_navigation_menu_home">Home</string>
    <string name="bottom_navigation_menu_inventory">Inventory</string>
    <string name="bottom_navigation_menu_history">History</string>
    <string name="bottom_navigation_menu_settings">Settings</string>


</resources>